--- a/src/app/components/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/components/administrar-usuarios/administrar-usuarios.component.html
@@ -1,6 +1,9 @@
 <div class="alert alert-danger" role="alert" *ngIf="hayError">
     {{ mensajeError }}
 </div>
+<ngx-spinner type="ball-pulse-sync" size="medium" bdColor="rgba(51,51,51,0.5)">
+    <p style="font-size: 15px; font-weight: bold; color: white">Cargando...</p>
+</ngx-spinner>
 <div class="container">
     <div class="row">
 
@@ -36,12 +39,6 @@
         </div>
 
         <div class="col">
-            <div class="text-center">
-                <div class="spinner-grow" *ngIf="spinnerBoolean" role="status">
-                    <span class="sr-only">Loading...</span>
-                </div>
-            </div>
-
             <table class="table table-striped">
                 <thead>
                     <tr>
