Manejo de opciones de ROL

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -4,26 +4,27 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="restricciones">Restricciones perimetrales <span
+        <a class="nav-link" routerLink="restricciones" [hidden]="rolDeUsuario!='ADMINISTRATIVO'">Restricciones perimetrales <span
             class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="notificaciones">Notificaciones <span
+        <a class="nav-link" routerLink="notificaciones" [hidden]="rolDeUsuario!='ADMINISTRATIVO'">Notificaciones <span
             class="badge badge-pill badge-danger badge-notif"
-            [(ngModel)]="notificacionesNoLeidas" [hidden]="cantNotificaciones<=0">{{notificacionesNoLeidas}}</span></a>
+            [(ngModel)]="notificacionesNoLeidas" [hidden]="cantNotificaciones<=0" >{{notificacionesNoLeidas}}</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="incidencias">Incidencias</a>
+        <a class="nav-link" routerLink="incidencias" [hidden]="rolDeUsuario!='ADMINISTRATIVO'">Incidencias</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="pruebasDeVida">Pruebas de vida</a>
+        <a class="nav-link" routerLink="pruebasDeVida"
+        [hidden]="rolDeUsuario!='ADMINISTRATIVO'" [hidden]="rolDeUsuario!='ADMINISTRATIVO'">Pruebas de vida</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="rutinas">Rutina</a>
+        <a class="nav-link" routerLink="rutinas" [hidden]="rolDeUsuario!='ADMINISTRATIVO'">Rutina</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-          aria-expanded="false">Administrar</a>
+          aria-expanded="false" [hidden]="rolDeUsuario!='SUPERVISOR'">Administrar</a>
         <div class="dropdown-menu" x-placement="bottom-start"
           style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 38px, 0px);">
           <a class="dropdown-item" routerLink="administrarUsuarios">Usuarios</a>
