--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
@@ -17,6 +17,7 @@
                 </div>
                 <div class="col-6">
                     <legend>Prueba de vida</legend>
+                    <a [hidden]="respondio">RESPUESTA NO RECIBIDA</a>
                     <img [src]="imgPruebaDeVida" alt="">
                 </div>
             </div>
@@ -44,7 +45,7 @@
                     <form #pruebaDeVidaForm="ngForm" (ngSubmit)="enviarPruebaDeVida(pruebaDeVidaForm)">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Descripción" name="descripcion"
-                                #descripcion="ngModel" [(ngModel)]="pruebaDeVida.descripcion" required>
+                                required>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-primary btn-block"
