--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
@@ -5,7 +5,7 @@
 
     <ng-template #content let-c="close" let-d="dismiss">
         <div class="modal-header">
-            <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <button type="button" class="close" aria-label="Close" (click)="cerrarModal()">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
@@ -45,7 +45,7 @@
                     <form #pruebaDeVidaForm="ngForm" (ngSubmit)="enviarPruebaDeVida(pruebaDeVidaForm)">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Descripción" name="descripcion"
-                                required>
+                            [(ngModel)]="pruebaDeVida.descripcion" required>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-primary btn-block"
