--- a/src/app/components/notificaciones/notificaciones.component.css
+++ b/src/app/components/notificaciones/notificaciones.component.css
@@ -2,6 +2,10 @@
     color: #26294D;
 }
 
+.card{
+    cursor: pointer;
+}
+
 .card:hover{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
