boton buscador incidencias disabled + card deleted

--- a/src/app/components/incidencias/incidencias.component.html
+++ b/src/app/components/incidencias/incidencias.component.html
@@ -19,7 +19,7 @@
                             <option value="3">Pruebas de vida</option>
                         </select>
                         <button class="btn btn-secondary my-2 my-sm-0" type="button"
-                            (click)=cambioTexto()>Search</button>
+                            (click)=cambioTexto() disabled="true">Search</button>
                     </form>
                 </div>
             </nav>
@@ -27,7 +27,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-8">
+        <div>
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -44,26 +44,6 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
-        <div class="col-4">
-            <div class="card border-secondary mb-3" style="max-width: 20rem;">
-                <div class="card-header text-center">
-                    <h4 class="card-title">Detalle</h4>
-                </div>
-                <div class="card-body">
-                    <div class="form-group">
-                        <form>
-                            <div class="row">
-                                <h5>Tópico: <a id="topico"></a></h5>
-                            </div>
-                            <div class="row">
-                                <textarea class="form-control" id="exampleTextarea" rows="5" placeholder="Detalles"
-                                    ngbTooltip="Detalles" readonly></textarea>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     <div class="text-center">
